--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.8.0",
+    "@mui/material": "^5.8.1",
+    "@google-cloud/documentai": "^7.4.0",
     "@google-cloud/vision": "^3.1.3",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
@@ -23,11 +28,20 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-json-view": "^1.21.3",
+    "react-scripts": "5.0.1",
+    "react-svg-pan-zoom": "^3.11.0",
+    "react-hot-toast": "^2.4.1",
+    "react-pdf": "^7.1.2",
     "tailwindcss": "3.3.2",
-    "tesseract.js": "^4.1.0",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "use-local-storage": "^3.0.0",
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "prettier-plugin-tailwindcss": "^0.3.0"
+    "copy-webpack-plugin": "^11.0.0",
+    "prettier-plugin-tailwindcss": "^0.3.0",
+    "gh-pages": "^4.0.0"
   }
 }
