--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.8.0",
-    "@mui/material": "^5.8.1",
     "@google-cloud/documentai": "^7.4.0",
     "@google-cloud/vision": "^3.1.3",
+    "@mui/icons-material": "^5.8.0",
+    "@mui/material": "^5.8.1",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
@@ -23,16 +23,18 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "eventsource-parser": "^1.0.0",
+    "file-type": "^18.5.0",
     "lodash": "^4.17.21",
     "next": "13.4.8",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-json-view": "^1.21.3",
+    "react-pdf": "^7.1.2",
     "react-scripts": "5.0.1",
     "react-svg-pan-zoom": "^3.11.0",
-    "react-hot-toast": "^2.4.1",
-    "react-pdf": "^7.1.2",
+    "read-excel-file": "^5.6.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
     "use-local-storage": "^3.0.0",
@@ -41,7 +43,7 @@
   },
   "devDependencies": {
     "copy-webpack-plugin": "^11.0.0",
-    "prettier-plugin-tailwindcss": "^0.3.0",
-    "gh-pages": "^4.0.0"
+    "gh-pages": "^4.0.0",
+    "prettier-plugin-tailwindcss": "^0.3.0"
   }
 }
