--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-scripts": "5.0.1",
     "react-svg-pan-zoom": "^3.11.0",
     "read-excel-file": "^5.6.1",
+    "retry-request": "^5.0.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
     "use-local-storage": "^3.0.0",
